crates/llvmkit-ir/tests/compile_fail/typed_pipeline_transform_result_verified.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/typed_pipeline_transform_result_verified.rs:32:47
   |
32 |         let _wrong: Module<'_, _, Verified> = pipe.run(verified, f, &mut fam).unwrap();
   |                     -----------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Module<'_, _, Verified>`, found `Module<'_>`
   |                     |
   |                     expected due to this
   |
   = note: expected struct `Module<'_, _, Verified>`
              found struct `Module<'_, Brand<'_>, Unverified>`
